--- a/profile/profile.yaml
+++ b/profile/profile.yaml
@@ -6,7 +6,7 @@ github_repo_root_url: https://github.com/jarviscanada/jarvis_data_eng_AllenYou
 # Introduce yourself, your academic and professional background.
 # What excites you about the software industry and your passion. At least 80 words
 summary: I am a recent graduate from Ryerson University with a Bachelor of Science (Honours) in Computer Science. During my education,
-  I had the opportunity to study software engineering, database systems, data mining and the fundamentals of soft. I enjoy solving and creating software problems/tasks.
+  I had the opportunity to study software engineering, database systems, data mining and solidifying my fundamentals of coding languages. I enjoy solving and creating software problems/tasks.
   Currently, I am a software developer at Jarvis Consulting Group. At Jarvis, I am developing my skill sets using agile software development practices and working hands-on with applications
   of new technologies (Docker, REST APIs, Springboot, etc.).
 
