--- a/profile/profile.yaml
+++ b/profile/profile.yaml
@@ -6,7 +6,8 @@ github_repo_root_url: https://github.com/jarviscanada/jarvis_data_eng_AllenYou
 # Introduce yourself, your academic and professional background.
 # What excites you about the software industry and your passion. At least 80 words
 summary: I am a recent graduate from Ryerson University with a Bachelor of Science (Honours) in Computer Science. During my education, 
-  I had the opportunity to study software engineering, database systems, data mining and the fundamentals of soft. I enjoy solving and creating software problems/tasks. 
+  I studied software engineering, database systems, data mining and the fundamentals of coding languages. I enjoy solving coding problems and creating software. During school the languages I got to work with are Java, C+/C
+  , PHP, SQL and Bash. I was able to work with these languages by completing school projects.
   Currently, I am a software developer at Jarvis Consulting Group. At Jarvis, I am developing my skill sets using agile software development practices and working hands-on with applications 
   of new technologies (Docker, REST APIs, Springboot, etc.).
 
@@ -16,8 +17,8 @@ skills:
   # At least 5 skills
   proficient:
     - Java
-    - Linux/Bash
     - RDBMS/SQL
+    - Bash
     - Agile/Scrum
     - Git
   # At least 5 skills
@@ -67,7 +68,7 @@ jarvis_projects:
 # Feel free to add more projects
 highlighted_projects:
     #project name
-  - name: "Web app for car rental service"
+  - name: "Web App For Car Rental Service"
     #URL is optional
     git_url:
     # The project description must start with an action verb (https://bit.ly/3guO98u)
@@ -103,5 +104,8 @@ others:
   - title: "Activities/Hobbies"
     bullets:
       - "Foodie"
+      - "I enjoy trying different types of food! As Toronto is ethnically diverse so is the food scene and I to eat at as many places as possible."
       - "Casual Gamer"
+      - "I spend my free time playing games to relax and enjoy the rest of the day or I play with friends and socialize with them."
       - "Fitness Enthusiast"
+      - "I believe that fitness is a core part of being mentally healthy. I try to work out after work to stay mentally and physically fit."
