--- a/profile/profile.yaml
+++ b/profile/profile.yaml
@@ -5,16 +5,10 @@ github_repo_root_url: https://github.com/jarviscanada/jarvis_data_eng_AllenYou
 
 # Introduce yourself, your academic and professional background.
 # What excites you about the software industry and your passion. At least 80 words
-<<<<<<< HEAD
 summary: I am a recent graduate from Ryerson University with a Bachelor of Science (Honours) in Computer Science. During my education,
-  I had the opportunity to study software engineering, database systems, data mining and solidifying my fundamentals of coding languages. I enjoy solving and creating software problems/tasks.
+  I studied software engineering, database systems, data mining and the fundamentals of coding languages. I enjoy solving coding problems and creating software. 
+  During school the languages I got to work with are Java, C+/C, PHP, SQL and Bash. I was able to work with these languages by completing school projects.
   Currently, I am a software developer at Jarvis Consulting Group. At Jarvis, I am developing my skill sets using agile software development practices and working hands-on with applications
-=======
-summary: I am a recent graduate from Ryerson University with a Bachelor of Science (Honours) in Computer Science. During my education, 
-  I studied software engineering, database systems, data mining and the fundamentals of coding languages. I enjoy solving coding problems and creating software. During school the languages I got to work with are Java, C+/C
-  , PHP, SQL and Bash. I was able to work with these languages by completing school projects.
-  Currently, I am a software developer at Jarvis Consulting Group. At Jarvis, I am developing my skill sets using agile software development practices and working hands-on with applications 
->>>>>>> feature/profile
   of new technologies (Docker, REST APIs, Springboot, etc.).
 
 # Group your skills by level.
@@ -73,20 +67,15 @@ jarvis_projects:
 # List of personal or academic projects
 # Feel free to add more projects
 highlighted_projects:
-<<<<<<< HEAD
-  #project name
-  - name: "Web app for car rental service"
-=======
-    #project name
-  - name: "Web App For Car Rental Service"
->>>>>>> feature/profile
-    #URL is optional
-    git_url:
-    # The project description must start with an action verb (https://bit.ly/3guO98u)
-    description: Worked in a group as a full stack developer using HTML, Angular, PHP, MySQL. The app focus was to be a user friendly app where one can sign up and purchase rentals for specific time and dates. Team coordination efforts include Github and daily meetings involving design review and implementation assigments.
-  - name: "CACM Document Retrieval Application"
-    git_url:
-    description: Created a Java program that finds the most relevant document in a collection of over 3000 documents ([the CACM collection](http://ir.dcs.gla.ac.uk/resources/test_collections/cacm/)). Preprocessed queries to filter stop words, stem words and non-alphanumeric values and stored document frequency, term frequency, position and document ID for every term. This information was then used to score the document relevancy for any user query to find the most relevant documents.
+#project name
+- name: "Web App For Car Rental Service"
+  #URL is optional
+  git_url:
+  # The project description must start with an action verb (https://bit.ly/3guO98u)
+  description: Worked in a group as a full stack developer using HTML, Angular, PHP, MySQL. The app focus was to be a user friendly app where one can sign up and purchase rentals for specific time and dates. Team coordination efforts include Github and daily meetings involving design review and implementation assigments.
+- name: "CACM Document Retrieval Application"
+  git_url:
+  description: Created a Java program that finds the most relevant document in a collection of over 3000 documents ([the CACM collection](http://ir.dcs.gla.ac.uk/resources/test_collections/cacm/)). Preprocessed queries to filter stop words, stem words and non-alphanumeric values and stored document frequency, term frequency, position and document ID for every term. This information was then used to score the document relevancy for any user query to find the most relevant documents.
 
 #List of professional experience
 #The job description allows hiring managers to understand your job and the technologies you used(e.g. programming languages, libraries, algorithms, hardware, tools, etc.).
@@ -101,11 +90,7 @@ professional_experience:
 
 
 #List of edcuation
-<<<<<<< HEAD
 education:
-=======
-education: 
->>>>>>> feature/profile
   - school_name: "Ryerson University"
     duration: "2017-2021"
     degree: "Bachelor of Science (Honours), Computer Science"
@@ -115,15 +100,7 @@ education:
 
 #Optional section
 others:
-<<<<<<< HEAD
-  #category
-  - title: "Activities/Hobbies"
-    bullets:
-      - "Foodie"
-      - "Casual Gamer"
-      - "Fitness Enthusiast"
-=======
-    #category
+#category
   - title: "Activities/Hobbies"
     bullets:
       - "Foodie"
@@ -132,4 +109,3 @@ others:
       - "I spend my free time playing games to relax and enjoy the rest of the day or I play with friends and socialize with them."
       - "Fitness Enthusiast"
       - "I believe that fitness is a core part of being mentally healthy. I try to work out after work to stay mentally and physically fit."
->>>>>>> feature/profile
